[metadata]
name = pypod-launcher
version = attr: pypod_launcher.__version__
url = https://github.com/pohmelie/pypod-launcher
author = pohmelie
author_email = multisosnooley@gmail.com
description = Wine targeted python version of pod-launcher
long_description = file: readme.md
long_description_content_type = text/markdown
license = WTFPL
licesnse_file = license.txt
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
packages = pypod_launcher
python_requires = >= 3.5
install_requires =
    pyside2 >= 5.11.2, < 6.0.0
    sqlitedict >= 1.6.0, < 2.0.0
    lxml >= 4.2.5, < 5.0.0
    skin >= 0.0.7, < 1.0.0
    aiohttp >= 3.4.4, < 4.0.0
    asyncqt >= 0.7.0, < 1.0.0
    jinja2 >= 2.10, < 3.0
    pyyaml >= 3.13, < 4.0

[options.package_data]
* = *.ui, *.ico, *.yaml

[options.entry_points]
console_scripts =
    pypod-launcher = pypod_launcher.launcher:main
